[tool.poetry]
name = "estimates-scraper"
version = "0.1.0"
description = "Scrape committees from Senate Estimates"
authors = ["king-millez <Millez.Dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
